# mental_health_LLM

./: .dockerignore  .gitignore  ANDROID_DEBUGGING.md  AndroidManifest_example.xml  DEPLOYMENT.md  Dockerfile  MainActivity_Example.kt  PRODUCTION_IMPROVEMENTS.md  README.md  Simple_Topics_Display.kt  activity_topics_example.xml  build.gradle_example.txt  docker-compose.yml  pyproject.toml  requirements.txt  requirements1.txt  settings.gradle.kts  test.txt  user_data.db
additional files/: ANDROID_DEBUG_STEPS.md  Android_Topics_Example.kt  Mental_Health_RAG_API.postman_collection.json  requirements.txt
app/: build.gradle.kts
data/: .docs_hash  chat_history.json
data/docs/: career-studies.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
keystore/: Keystore  keystore.txt
src/: android_main.py  main.py
src/api/: android_server.py  server.py
src/data/: chat_history.json  vector_store.index.npz
src/llm/: client.py  instruction_templates.py  prompts.py
src/rag/: Pre-index_documents_offline.py  doc_loader.py  embeddings.py  indexer.py  pre_index_documents_offline.py  retriever.py
src/saved_chats/: chat_2025-11-19_10-39-52.txt  chat_2025-11-19_10-40-47.txt  chat_2025-11-19_10-41-40.txt  chat_2025-11-19_10-44-35.txt  chat_2025-11-19_10-58-55.txt  chat_2025-11-19_11-03-36.txt  chat_2025-11-19_11-07-51.txt  chat_2025-11-19_11-10-34.txt
src/storage/: __init__.py  chat_history.py  user_data.db  user_db.py  vector_store.py
src/types/: __init__.py
src/utils/: config.py
tests/: test_llm.py  test_rag.py  test_storage.py
(+16 files in other folders)
