[tool.poetry]
name = "python-rag-llm"
version = "0.1.0"
description = "A project implementing a Retrieval-Augmented Generation model with a language model for user interaction."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "^1.19.5"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"